Add newborn CV model, controller and corresponding route
The commit introduces a new model 'newborn CV', along with its corresponding controller and route. The model consists of two tables: `newborn_cvs` and `media`. The added controller houses functionality for creating new entries in both these tables. The commit further extends the routes to include a POST endpoint for '/api/newborn-cv'.
