# docs/swagger.yaml
@@ -125,8 +125,54 @@ info:
     name: Apache 2.0
     url: http://www.apache.org/licenses/LICENSE-2.0.html
   title: API untuk data EEG
-  version: 2024.06.04.5
+  version: 2024.06.05.1
 paths:
+  /newborn-cv:
+    post:
+      consumes:
+      - multipart/form-data
+      description: Create a new record in the newborn_cvs table
+      parameters:
+      - description: Trial Code
+        in: formData
+        name: trial_code
+        required: true
+        type: string
+      - description: Data Type (image or video)
+        enum:
+        - image
+        - video
+        in: formData
+        name: data_type
+        required: true
+        type: string
+      - description: Notes
+        in: formData
+        name: notes
+        type: string
+      - description: File
+        in: formData
+        name: file
+        required: true
+        type: file
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/reqresp.SuccessResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/reqresp.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/reqresp.ErrorResponse'
+      summary: Create a new record in the newborn_cvs table
+      tags:
+      - Bayi
   /newborn-data:
     post:
       consumes:
