# routes/routes.go
@@ -13,6 +13,7 @@ func Setup(app *fiber.App) {
 	// Bayi
 	app.Post("/api/newborn-data", controllers.CreateNewbornData)
 	app.Post("/api/newborn-eeg", controllers.CreateNewbornEEG)
+	app.Post("/api/newborn-cv", controllers.CreateNewbornCv)
 
 	// Ibu hamil
 	app.Post("/api/pregnant-data", controllers.CreatePregnantData)
